revert previous project html

--- a/templates/banner.html
+++ b/templates/banner.html
@@ -1,8 +1,8 @@
 <link type="text/css" rel="stylesheet" href="static/css/banner.css" />
 <nav>
     <img class="banner-image" src="logo.svg" />
-    <a class="banner-text" href="/">Elroy's Emporium</a>
-    <a class="nav-link" href="/new">Add Item</a>
+    <a class="banner-text" href="/">Time Off Calculator</a>
+    <a class="nav-link" href="/new">Add Request</a>
 </nav>
 
 
