--- a/templates/banner.html
+++ b/templates/banner.html
@@ -1,6 +1,6 @@
 <link type="text/css" rel="stylesheet" href="static/css/banner.css" />
 <nav>
-    <img class="banner-image" src="logo.svg" />
+    <img class="banner-image" src="static/img/logo.svg" />
     <a class="banner-text" href="/">Time Off Calculator</a>
     <a class="nav-link" href="/new">Add Request</a>
 </nav>
