add gulp & sass & font & templates

--- a/website/templates/banner.html
+++ b/website/templates/banner.html
@@ -2,12 +2,17 @@
 <nav>
     <img class="banner-image" src="static/img/logo.svg" />
     <a class="banner-text" href="/">PTO Calculator</a>
-    <a class="nav-link" href="/new">Add Request</a>
+    <a class="nav-link new" href="/new">Add Request</a>
     {%if True%}
-    <a class="nav-link" href="/admin">Admin</a>
+    <a class="nav-link admin" href="/admin">Admin</a>
     {%endif%}
     {%if True%}
-    <a class="nav-link" href="/approve">Approve</a>
+    <a class="nav-link approve" href="/approve">Approve</a>
+    {%endif%}
+    {%if True%}
+    <a class="nav-link sign" href="#">Sign In</a>
+    {%else%}
+    <a class="nav-link sign" href="#">Sign Out</a>
     {%endif%}
 </nav>
 
