--- a/website/templates/layout.html
+++ b/website/templates/layout.html
@@ -1,6 +1,7 @@
 <html>
     <base href="/" />
     <link type="text/css" rel="stylesheet" href="/static/css/style.css" />
+    <link type="text/css" rel="stylesheet" href="/static/css/table_entry.css" />
     <title>PTO Calculator</title>
 </html>
 <body>
