--- a/website/templates/textbox.html
+++ b/website/templates/textbox.html
@@ -2,7 +2,7 @@
 {% set formatted_class = class_prefix.lower().replace(' ', '-') %}
 <div class="text-box-container">
     <label class="text-box-label" for={{name}}>{{label_text}}</label>
-    <input class="formatted_class"}} type="{{type}}" name="{{name}}" value="{{value}}">
+    <input class="text-box-inputs"}} type="{{type}}" name="{{name}}" value="{{value}}">
     <hr class="inactive-bar"}} />
     <hr class="active-bar"}} />
 </div>
