--- a/website/static/scss/banner.scss
+++ b/website/static/scss/banner.scss
@@ -33,13 +33,13 @@ nav {
 .nav-link {
     display: block;
     background: rgba(63, 243, 213, 1);
-    color: #fff;
+    color: #000;
     text-decoration: none;
     border-radius: 2px;
     border: 1px solid transparent;
     margin: auto;
     padding: 10px 20px;
-    
+
     &.new {
         grid-area: new;
     }
