--- a/website/static/scss/calendar.scss
+++ b/website/static/scss/calendar.scss
@@ -2,12 +2,19 @@
 .calendar {
     display: flex;
     flex-flow: column;
+    padding: 10px;
+    .calendar-title {
+        width: 100%;
+        display: flex;
+        flex-flow: row;
+        justify-content: space-between;
+        align-items: center;
+    }
     .calendar-body {
         text-align: center;
         display: grid;
         grid-template-columns: repeat(7, 1fr);
         grid-gap: 5px;
-        padding: 5px;
         .day-header {
             padding: 5px 50px;
             border-radius: 5px;
