--- a/website/static/scss/style.scss
+++ b/website/static/scss/style.scss
@@ -19,17 +19,24 @@ body {
     padding: 0;
 }
 
-button {
+button,
+.button {
     border-radius: 5px;
     border: none;
-    padding: 5px 10px;
+    padding: 15px 30px;
     background: $accent;
-    box-shadow: 1px 1px 1px 0 rgba(0, 0, 0, 0.5);
-    :hover {
-        filter: hue-rotate(-90deg);
+    text-decoration: none;
+    color: #000;
+    cursor: default;
+    &:hover {
+        background: $primary;
+        color: #fff;
     }
-    :active {
-        transform: translate(1px 1px);
+    &:active {
+        filter: hue-rotate(-45deg)
+    }
+    :visited {
+        color: unset;
     }
 }
 
