--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -6,13 +6,13 @@
     <div class="balances">
         <h1 class="balance-header" id="earnings-header">Earnings</h1>
         <span class="balance-title" id="earned-hours-title">Earned Hours</span>
-        <span class="balance-total" id="earned-hours-number">25</span>
+        <span class="balance-total" id="earned-hours-number">{{hours_earned}}</span>
         <span class="balance-title" id="requested-hours-title">Requested Hours</span>
-        <span class="balance-total" id="requested-hours-number">15</span>
+        <span class="balance-total" id="requested-hours-number">{{hours_requested}}</span>
         <span class="balance-title" id="taken-hours-title">Taken Hours</span>
-        <span class="balance-total" id="taken-hours-number">5</span>
+        <span class="balance-total" id="taken-hours-number">{{hours_taken}}</span>
         <span class="balance-title total" id="remaining-hours-title">Remaining Balance</span>
-        <span class="balance-total total" id="remaining-hours-number">5</span>
+        <span class="balance-total total" id="remaining-hours-number">{{hours_remaining}}</span>
     </div>
     <div class="pending-requests">
         <h1 class="pending-header">Pending Requests</h1>
