--- a/website/templates/login.html
+++ b/website/templates/login.html
@@ -1,9 +1,12 @@
 {%extends "layout.html"%}
 {% block content %}
-    <h1>Login</h1>
-    <form id="login" action="/login" method="post">
-        <input name="username" id="username" type="text" />
-        <input name="password" id="password" type="password" />
-        <button type="submit">login</button>
-    </form>
+    <link type="text/css" rel="stylesheet" href="static/login.css" />
+    <div class="login-page">
+        <h1>Login</h1>
+        <form id="login" action="/login" method="post">
+            <input name="username" id="username" type="text" />
+            <input name="password" id="password" type="password" />
+            <button type="submit">login</button>
+        </form>
+    </div>
 {%endblock%}
