--- a/website/templates/banner.html
+++ b/website/templates/banner.html
@@ -1,7 +1,7 @@
 <link type="text/css" rel="stylesheet" href="static/css/banner.css" />
 <nav>
     <img class="banner-image" src="static/img/logo.svg" />
-    <a class="banner-text" href="/">PTO Calculator</a>
+    <a class="banner-text" href="/">Free Time</a>
     <a class="nav-link new" href="/new">Add Request</a>
     {%if True%}
     <a class="nav-link admin" href="/admin">Admin</a>
@@ -9,10 +9,10 @@
     {%if True%}
     <a class="nav-link approve" href="/approve">Approve</a>
     {%endif%}
-    {%if True%}
-    <a class="nav-link sign" href="#">Sign In</a>
+    {%if signed_in%}
+    <a class="nav-link sign" href="/sign_out">Sign Out</a>
     {%else%}
-    <a class="nav-link sign" href="#">Sign Out</a>
+    <a class="nav-link sign" href="/login">Sign In</a>
     {%endif%}
 </nav>
 
