--- a/website/static/scss/style.scss
+++ b/website/static/scss/style.scss
@@ -79,3 +79,9 @@ button,
         transition: 0.25s linear
     }
 }
+input:not([type="checkbox"]) {
+    border: none;
+    border-bottom: 1px solid $primary;
+    font-size: 14pt;
+    -moz-appearance: textfield;
+}
