--- a/website/static/scss/admin.scss
+++ b/website/static/scss/admin.scss
@@ -75,7 +75,7 @@
         #current-user-body {
             display: grid;
             grid-gap: 1px;
-            grid-template-columns: 0.25fr 0.5fr 0.5fr 0.5fr;
+            grid-template-columns: 0.25fr repeat(4, 0.5fr);
             .delete {
                 grid-column: 1;
             }
@@ -87,6 +87,16 @@
             }
             .current-hire-date {
                 grid-column: 4;
+            }
+            .roles {
+                grid-column: 5;
+                display: flex;
+                flex-flow: row;
+                justify-content: space-around;
+                text-align: center;
+                * {
+                    flex-basis: 33%;
+                }
             }
         }
         #current-user-header {
