--- a/website/templates/admin.html
+++ b/website/templates/admin.html
@@ -18,7 +18,7 @@
             </div>
             <div class="input" id="hours-container">
                     <label for="hours">Hours Per Pay Period</label>
-                    <input id="hours" name="hours" type="number" min="0" />
+                    <input id="hours" name="hours" type="text" min="0" />
                 </div>
             <div class="input" id="username-container">
                 <label for="username">Username</label>
@@ -45,28 +45,38 @@
             <button id="cancel" type="button">Cancel</button>
             <button id="submit" type="submit">Submit</button>
         </form>
-        <form class="edit-user" action="/deleteUser" method="post">
+        <form class="edit-user" action="/saveUsers" method="post">
             <h1>Current Users</h1>
             <div id="current-user-header">
-                <span class="delete">delete</span>
+                <span class="delete">Delete</span>
                 <span class="current-first-name">First Name</span>
                 <span class="current-last-name">Last Name</span>
                 <span class="current-hire-date">Hire Date</span>
+                <div class="roles">
+                    <span class="current-user">User</span>
+                    <span class="current-approver">Approver</span>
+                    <span class="current-admin">Admin</span>
+                </div>   
             </div>
             <div id="current-user-body">
                 {% for emp in employees %}
                 <div class="delete">
-                    <input type="checkbox" name="delete-user"  />
+                    <input type="checkbox" name="delete-user" value="{{emp.employee_id}}"  />
                 </div>
                 <span class="current-first-name">{{emp.first_name}}</span>
                 <span class="current-last-name">{{emp.last_name}}</span>
                 <span class="current-hire-date">{{emp.hire_date | date_string}}</span>
-                <input type="hidden" name="emp-id" value={{emp.employee_id}} />
+                <div class="roles">
+                    <input id="{{emp.employee_id}}-user-role" type="checkbox" {{('user', emp.user.roles)|checked}} class="role-selection"  />
+                    <input id="{{emp.employee_id}}-approver-role" type="checkbox" {{('approver', emp.user.roles)|checked}} class="role-selection" />
+                    <input id="{{emp.employee_id}}-admin-role" type="checkbox" {{('admin', emp.user.roles)|checked}} class="role-selection" />
+                </div>
                 {% endfor %}
+                <input id="change-tracker" class="change-tracker" type="hidden" name="employee-changes" />
             </div>
             <div class="buttons">
                 <button type="button" id="clear">Clear</button>
-                <button type="submit" id="delete">Delete</button>
+                <button type="submit" id="save">Save</button>
             </div>
         </form>
     </div>
