hours are floats, not ints

--- a/website/templates/admin.html
+++ b/website/templates/admin.html
@@ -18,7 +18,7 @@
             </div>
             <div class="input" id="hours-container">
                     <label for="hours">Hours Per Pay Period</label>
-                    <input id="hours" name="hours" type="number" min="0" />
+                    <input id="hours" name="hours" type="text" />
                 </div>
             <div class="input" id="username-container">
                 <label for="username">Username</label>
